# hey

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py  views.py
config/settings/: development.py
config/templates/core/: index.html
config/templates/registration/: login.html
hey/: admin.py  cache.py  forms.py  models.py  tests.py  urls.py  views.py
hey/api_views/: checkin.py  friend.py
hey/migrations/: 0001_initial.py  0002_friend_last_contact_alter_friend_phone.py  0002_friend_pronouns.py  0003_account.py  0003_friend_status.py  0004_group.py  0005_friend_group.py  0006_alter_group_unit.py
hey/serializers/: __init__.py  checkin.py  friend.py
hey/templates/hey/: about.html  account_confirm_delete.html  account_detail.html  account_form.html  checkins.html  checkins.html.bak  friend_confirm_delete.html  friend_detail.html  friend_form.html  friend_list.html  group_confirm_delete.html  group_detail.html  group_form.html  group_list.html
hey/templatetags/: hey_extras.py
hey/tests/: __init__.py  checkins.py  friend.py
hey/views/: __init__.py  about.py  account.py  checkins.py  friend.py  group.py
templates/: base.html  elevatorpitch.html
